microservice/timeout_retries/mesh/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8001
        name: http
        protocol: HTTP
      hosts:
        - "feuyeux.org"
