microservice/timeout_retries/mesh/dr-a.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-a-dr
spec:
  host: hello-a-svc
  subsets:
    - name: v1
      labels:
        version: v1
