microservice/timeout_retries/mesh/vs-b.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-b-vs
spec:
  hosts:
    - hello-b-svc
  http:
    - match:
        - uri:
            prefix: /hello
      route:
        - destination:
            host: hello-b-svc
